--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 </head> 
 <body>
 
+<h3 class = "copyright">
+Copyright © 2020 Jason Ervin	
+</h3>
+
 <h1>  Jezebel  </h1>
 <h2> Chapter 1</h2>
 
